--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,14 @@
     </div>
 
     <div class="vz-layout__content">
+
+      <h1 class="vz-page__header">jumbotron</h1>
+      <div class="vz-jumbotron">
+        <div class="vz-jumbotron__title">Get over here!</div>
+        <div class="vz-jumbotron__description">Elit sint eiusmod non magna excepteur tempor deserunt pariatur culpa fugiat dolore sunt ullamco esse. Laboris excepteur ut fugiat sunt exercitation. In pariatur labore dolor duis irure nulla irure laborum. Deserunt occaecat cillum esse elit cupidatat voluptate anim incididunt elit labore.</div>
+        <button class="vz-button vz-button--primary" type="button">Yep!</button>
+      </div>
+
       <h1 class="vz-page__header">action card</h1>
       <div class="vz-action-card">
         <div class="vz-action-card__title">Action Title</div>
