Count bubbles exit count bubble

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,23 @@
 
     <div class="vz-layout__content">
 
+      <h1 class="vz-page__header">count bubbles</h1>
+
+      <div class="">
+        <div class="vz-count-bubble vz-count-bubble--faded">0</div>
+        <img src="https://picsum.photos/200/180/?random" alt="">
+      </div>
+
+      <div class="vz-count-bubbles">
+        <div class="vz-count-bubble">17</div>
+        <img src="https://picsum.photos/200/180/?random" alt="">
+      </div>
+
+      <div class="vz-count-bubbles">
+        <div class="vz-count-bubble">999+</div>
+        <img src="https://picsum.photos/200/180/?random" alt="">
+      </div>
+
       <h1 class="vz-page__header">jumbotron</h1>
       <div class="vz-jumbotron">
         <div class="vz-jumbotron__title">Get over here!</div>
