--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,52 @@
     </div>
 
     <div class="vz-layout__content">
+      <h1 class="vz-page__header">comments</h1>
+      <div class="vz-container--narrow">
+        <div class="vz-comment vz-comment--tail-left">
+          <div class="vz-comment__body">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="vz-comment__actions">
+            <div class="vz-link vz-button--micro">remove comment</div>
+          </div>
+        </div>
+        <div class="vz-comment vz-comment--tail-left">
+          <div class="vz-comment__body">
+            <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="vz-comment__actions">
+            <div class="vz-link vz-button--micro">remove comment</div>
+          </div>
+        </div>
+        <div class="vz-comment vz-comment--tail-left">
+          <div class="vz-comment__body">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="vz-comment__actions">
+            <div class="vz-link vz-button--micro">remove comment</div>
+          </div>
+        </div>
+        <div class="vz-comment vz-comment--tail-right vz-comment--is-active">
+          <div class="vz-comment__body">
+            <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="vz-comment__actions">
+            <div class="vz-link vz-button--micro">remove comment</div>
+          </div>
+        </div>
+        <div class="vz-comment vz-comment--tail-right">
+          <div class="vz-comment__body">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="vz-comment__actions">
+            <div class="vz-link vz-button--micro">remove comment</div>
+          </div>
+        </div>
+      </div>
+
       <h1 class="vz-page__header">buttons</h1>
-      <div>
+      <div class="container">
         <h2>Regular</h2>
         <button class="vz-button">DEFAULT</button>
         <button class="vz-button vz-button--primary">PRIMARY</button>
@@ -68,7 +112,7 @@
         <button class="vz-button vz-button--danger">DANGER</button>
       </div>
 
-      <div>
+      <div class="container">
         <h2>Small</h2>
         <button class="vz-button vz-button--small">DEFAULT</button>
         <button class="vz-button vz-button--primary vz-button--small">PRIMARY</button>
@@ -78,7 +122,7 @@
         <button class="vz-button vz-button--danger vz-button--small">DANGER</button>
       </div>
 
-      <div>
+      <div class="container">
         <h2>Links</h2>
         <button class="vz-link">DEFAULT</button>
         <button class="vz-link vz-link--primary">PRIMARY</button>
@@ -88,7 +132,7 @@
         <button class="vz-link vz-link--danger">DANGER</button>
       </div>
 
-      <div>
+      <div class="container">
         <h2>Block</h2>
         <button class="vz-button vz-button--full-width">DEFAULT</button>
         <button class="vz-button vz-button--primary vz-button--full-width">PRIMARY</button>
@@ -96,6 +140,11 @@
         <button class="vz-button vz-button--yes vz-button--full-width">YES</button>
         <button class="vz-button vz-button--no vz-button--full-width">NO</button>
         <button class="vz-button vz-button--danger vz-button--full-width">DANGER</button>
+      </div>
+
+      <div class="container">
+        <h2>Close</h2>
+        <button class="vz-button vz-button--square vz-button--close">✕</button>
       </div>
 
       <h1 class="vz-page__header">flashes</h1>
