Comments active state.

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
             <div class="vz-link vz-button--micro">remove comment</div>
           </div>
         </div>
-        <div class="vz-comment vz-comment--tail-left">
+        <div class="vz-comment vz-comment--tail-left vz-comment--is-active-left">
           <div class="vz-comment__body">
             <p>Lorem ipsum dolor sit amet</p>
           </div>
@@ -83,7 +83,7 @@
             <div class="vz-link vz-button--micro">remove comment</div>
           </div>
         </div>
-        <div class="vz-comment vz-comment--tail-right vz-comment--is-active">
+        <div class="vz-comment vz-comment--tail-right vz-comment--is-active-right">
           <div class="vz-comment__body">
             <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
