--- a/public/index.html
+++ b/public/index.html
@@ -237,6 +237,63 @@
           <input class="vz-form-control vz-form-control--input is-invalid" placeholder="Placeholder" type="text">
           <div class="vz-form-control__error-msg">error message.</div>
         </div>
+        <div class="vz-form-group">
+          <label class="vz-form-control vz-form-control--label" for="">Select</label>
+          <select class="vz-form-control vz-form-control--select" name="" id="">
+            <option value="0" disabled>Unselectable</option>
+            <option value="1">Selectable 1</option>
+            <option value="2">Selectable 2</option>
+          </select>
+        </div>
+        <div class="vz-form-group">
+          <label for="">Checkbox</label>
+          <div class="vz-form-control__checker">
+            <label for="">
+              <input type="checkbox">
+              Heyo there.
+            </label>
+          </div>
+          <div class="vz-form-control__checker">
+            <label for="">
+              <input type="checkbox">
+              Heyo there.
+            </label>
+          </div>
+          <div class="vz-form-control__checker">
+            <label for="">
+              <input type="checkbox" disabled>
+              Heyo there I'm disabled.
+            </label>
+          </div>
+        </div>
+        <div class="vz-form-group">
+          <label for="">Select One</label>
+          <div class="vz-form-control__radio">
+            <label for="">
+              <input type="radio">
+              Select me.
+            </label>
+          </div>
+          <div class="vz-form-control__radio">
+            <label for="">
+              <input type="radio">
+              Select me.
+            </label>
+          </div>
+          <div class="vz-form-control__radio">
+            <label for="">
+              <input type="radio">
+              Select me.
+            </label>
+          </div>
+          <div class="vz-form-control__radio">
+            <label for="">
+              <input type="radio" disabled>
+              Select me. Not.
+            </label>
+          </div>
+        </div>
+
         <button class="vz-button vz-button--primary" type="button">atualizar</button>
         <button class="vz-button vz-button--secondary" type="button">enviar</button>
       </form>
