changed ks delete buttons color.

--- a/public/index.html
+++ b/public/index.html
@@ -216,13 +216,13 @@
       <div class="vz-action-card">
         <div class="vz-action-card__title">Action Title</div>
         <div class="vz-action-card__description">Are you really sure you want to delete this thing?</div>
-        <button class="vz-button vz-button--no" type="">I'm sure! Delete.</button>
+        <button class="vz-button vz-button--danger" type="">I'm sure! Delete.</button>
         <button class="vz-button vz-button--primary" type="">Not really...please take me back.</button>
       </div>
       <div class="vz-action-card">
         <div class="vz-action-card__title">Action Title</div>
         <div class="vz-action-card__description">Are you really sure you want to delete this thing?</div>
-        <button class="vz-button vz-button--no vz-button--full-width" type="">I'm sure! Delete.</button>
+        <button class="vz-button vz-button--danger vz-button--full-width" type="">I'm sure! Delete.</button>
         <button class="vz-button vz-button--primary vz-button--full-width" type="">Not really...please take me back.</button>
       </div>
 
