--- a/public/index.html
+++ b/public/index.html
@@ -591,7 +591,26 @@
           </tbody>
         </table>
       </section>
+
+      <h1 class="vz-page__header">pagination</h1>
+      <section class="ks-section">
+        <div class="vz-pagination">
+          <div class="vz-pagination__content">
+            <a class="vz-pagination__button vz-pagination__button--beginning" href="#">most recent</a>
+            <a class="vz-pagination__button" href="#">1</a>
+            <a class="vz-pagination__button vz-pagination__button--active" href="#">2</a>
+            <a class="vz-pagination__button" href="#">3</a>
+            <a class="vz-pagination__button" href="#">4</a>
+            <a class="vz-pagination__button" href="#">5</a>
+            <span class="vz-pagination__button vz-pagination__button--disabled" disabled>...</span>
+            <a class="vz-pagination__button" href="#">17</a>
+            <a class="vz-pagination__button vz-pagination__button--ending" href="#">oldest</a>
+          </div>
+        </div>
+      </section>
   </div>
+
+
 
   <script src="main.js"></script>
 
